# web-scrapping-atulado

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  online-monitor.yml
data/: discriminacion-horaria_rates.json  milenial_rates.json
data/web/: static.html
src/web_scrapping/: __init__.py  parser.py  paths.py
tests/: base_test_parser.py  test_parser.py  test_parser_cli.py  test_parser_offline.py  test_parser_online.py  test_parser_validation.py
